# gptapiexperiment

./: .gitignore  README.md  basicChatLog.mjs  basicFunctionCall.mjs  batched_send_to_logflare.mjs  cody.js  expose_confidence.mjs  foo.js  index.js  index.mjs  newtest.mjs  package-lock.json  package.json  prototypeFunctionChat.mjs  prototypechat.mjs  pyproject.toml  readme.md  requirements.txt  segfault.mjs  smolaiContext.ts  smolaicontexttest.ts  smolaiprototype.ts  smolaitest.ts  smolchat.mjs  test_zodtojson.mjs  testassistantsapi.mjs  tsconfig.json  useSmolChat.mjs  v4prototypechat.mjs
archive/: log2tsv.js  test_zodtojson.mjs  v3prototypeFunctionChat.mjs  v3prototypeSmolChat.mjs
archive/smol-developer-playground/experiment/: main.mjs
archive/smol-developer-playground/openai_function_call/: .gitignore
experiment/: app.md
openai_function_call/: README.md  pyproject.toml
openai_function_call/smol_dev/: __init__.py  main.py  prompts.py  utils.py
openai_function_call/src/: main.py  prompts.py  utils.py
smol_dev/: __init__.py  __main__.py  main.py  prompts.py  utils.py
